# build-your-own-xyz

mini-react/: README.md  app.js  index.html  miniReact.js
mini-react/src/: createElement.js  dom.js  hooks.js  index.js  reconciler.js
ts++/: CMakeLists.txt  compile_commands.json  ctrlAndFlow.tspp  functions.tspp  sample.tspp  test.tspp  variables.tspp
ts++/docs/: development.md  grammer.md
ts++/src/: CMakeLists.txt  compiler  live.test.tspp  main.cpp  output.txt  tspp-lexer
ts++/src/codegen/llvm/: llvm_code_gen.cpp  llvm_code_gen.h
ts++/src/core/: error_reporter.cpp  error_reporter.h  utils.cpp  utils.h
ts++/src/core/common/: common_types.h
ts++/src/core/diagnostics/: error_reporter.cpp  error_reporter.h
ts++/src/core/utils/: ast_printer.h  log_utils.cpp  log_utils.h
ts++/src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
ts++/src/lexer/patterns/: lexer_patterns.h  token_maps.h
ts++/src/lexer/scanner/: token_scanner.cpp
ts++/src/lexer/scanner/base/: scanner_base.cpp
ts++/src/lexer/scanner/specialized/: identifier_scanner.cpp  identifier_scanner.h  number_scanner.cpp  operator_scanner.cpp
ts++/src/lexer/state/: lexer_state.cpp  lexer_state.h
ts++/src/parser/: ast.h  parser.cpp  parser.h
ts++/src/parser/nodes/: declaration_nodes.h  expression_nodes.h  statement_nodes.h  type_nodes.h
ts++/src/parser/visitors/: base_visitor.h
ts++/src/parser/visitors/parse_visitor/: base_parse_visitor.cpp  base_parse_visitor.h  declaration_parse_visitor.cpp  declaration_parse_visitor.h  expression_parse_visitor.cpp  expression_parse_visitor.h
ts++/src/parser/visitors/parse_visitor/base/: base_parse_visitor.cpp  base_parse_visitor.h
ts++/src/parser/visitors/parse_visitor/declaration/: class_decl_visitor.h  declaration_parse_visitor.cpp  declaration_parse_visitor.h  enum_parse_visitor.h  func_decl_visitor.h  ideclaration_visitor.h  interface_parse_visitor.h  var_decl_visitor.h
ts++/src/parser/visitors/parse_visitor/expression/: binary_visitor.h  call_visitor.h  cast_visitor.h  expression_parse_visitor.cpp  expression_parse_visitor.h  iexpression_visitor.h  primary_visitor.h  unary_visitor.h
ts++/src/parser/visitors/parse_visitor/statement/: branch_stmt_visitor.h  flowctr_stmt_visitor.h  istatement_visitor.h  loop_stmt_visitor.h  statement_parse_visitor.cpp  statement_parse_visitor.h  trycatch_stmt.visitor.h
ts++/src/parser/visitors/type_check_visitor/: type_check_visitor.cpp  type_check_visitor.h
ts++/src/repl/: repl.cpp
ts++/src/tokens/: token_type.h  tokens.h
ts++/src/tokens/stream/: token_stream.cpp  token_stream.h
ts++/src_new/core/common/: common_types.h
ts++/src_new/core/diagnostics/: error_reporter.cpp  error_reporter.h
ts++/src_new/core/utils/: file_utils.cpp  file_utils.h  string_utils.cpp  string_utils.h
ts++/tests/: unvalid.tspp  valid.tspp
